syntax = "proto3";

package ON.Fragments.Content.Stats;

import "google/api/annotations.proto";

service StatsProgressInterface {
  rpc LogProgressContent (LogProgressContentRequest) returns (LogProgressContentResponse)
  {
    option (google.api.http) = {
      post: "/api/stats/{ContentID}/progress"
      body: "*"
    };
  }
}
  
message LogProgressContentRequest {
  string ContentID = 1;
  float Progress = 2;
}
  
message LogProgressContentResponse {
  string Error = 1;
}

message ProgressContentEvent {
  string UserID = 1;
  string ContentID = 2;
  float Progress = 3;
}
